--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
         <dot>·</dot>
         <a href="#twitter">X (FKA Twitter)</a>
         <dot>·</dot>
-        <a href="#privacy"> Privacy policy </a>
+        <a href="/privacy"> Privacy policy </a>
+        <dot>·</dot>
+        <a href="/terms"> Terms of service </a>
       </footlinks>
       <tagline> Crafted for people with overflowing bookmark folders </tagline>
       <copy>©2026 <brand>Eventually</brand></copy>
