--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="canonical" href="https://geteventually.com" />
+    <!-- Open Graph / Facebook, LinkedIn, Pinterest, WhatsApp -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://geteventually.com" />
+    <meta property="og:title" content="Eventually | Revisit your saved tweets" />
+    <meta property="og:description" content="Bet you have hundreds of saved tweets. Use Eventually to actually revisit them. A tiny browser extension that emails you the tweets you meant to come back to, but never did. Works with X bookmarks." />
+    <meta property="og:image" content="https://geteventually.com/og.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Eventually — Bet you have hundreds of saved tweets. Use Eventually to actually revisit them. Download Chrome Extension. Works with X bookmarks." />
+    <meta property="og:site_name" content="Eventually" />
+    <meta property="og:locale" content="en_US" />
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://geteventually.com" />
+    <meta name="twitter:title" content="Eventually | Revisit your saved tweets" />
+    <meta name="twitter:description" content="Bet you have hundreds of saved tweets. Use Eventually to actually revisit them. A tiny browser extension that emails you the tweets you meant to come back to, but never did. Works with X bookmarks." />
+    <meta name="twitter:image" content="https://geteventually.com/og.png" />
+    <meta name="twitter:image:alt" content="Eventually — Bet you have hundreds of saved tweets. Use Eventually to actually revisit them. Download Chrome Extension. Works with X bookmarks." />
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="shortcut icon" href="/favicon.ico" />
